--- a/techpack/data/drivers/rmnet/shs/Kconfig
+++ b/techpack/data/drivers/rmnet/shs/Kconfig
@@ -2,9 +2,9 @@
 # RMNET_SHS driver
 #
 
-menuconfig RMNET_SHS
+config RMNET_SHS
     tristate "Rmnet SHS driver"
-    default m
+    default n
 #    depends on RMNET
     ---help---
         performance mode of rmnet driver
